--- a/src/index.html
+++ b/src/index.html
@@ -97,8 +97,8 @@
             <section class="main_content_section_task_list_container flex">
                 <article class="main_content_section_individual_task flex">
                     <div class="main_content_section_task_description_left flex">
-                        <input type="checkbox" name="task_checkbox" class="main_content_section_task_checkbox" id="task1">
-                        <p class="main_content_section_task_description_text">Here is going to be my first Pending Task.</p>
+                        <input type="checkbox" name="task_checkbox1" class="main_content_section_task_checkbox" id="task1">
+                        <label for="task1" class="main_content_section_task_description_text"><p>Here is going to be my first Pending Task.</p></label>
                     </div>
                     <div class="main_content_section_task_description_right flex">
                         <p class="main_content_section_task_due_date">Jun-26th-2024</p>
@@ -117,8 +117,8 @@
                 </article>
                 <article class="main_content_section_individual_task flex">
                     <div class="main_content_section_task_description_left flex">
-                        <input type="checkbox" name="task_checkbox" class="main_content_section_task_checkbox" id="task1">
-                        <p class="main_content_section_task_description_text">Here is going to be my second Pending Task.</p>
+                        <input type="checkbox" name="task_checkbox2" class="main_content_section_task_checkbox" id="task2">
+                        <label for="task2" class="main_content_section_task_description_text"><p>Here is going to be my second Pending Task.</p></label>
                     </div>
                     <div class="main_content_section_task_description_right flex">
                         <p class="main_content_section_task_due_date">Dec-25th-2024</p>
@@ -138,5 +138,6 @@
             </section>
         </section>
     </main>
+    <footer class="main_footer">Website Under Construction</footer>
 </body>
 </html>
