--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-Do List</title>
 </head>
-<body class="container">
+<body class="container grid">
     <header class="main_header_section flex">
         <div class="main_header_section_icon">
             <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="30px" fill="none" viewBox="0 0 24 24">
@@ -16,9 +16,51 @@
     </header>
     <nav class="left_side_navbar_section">
         <section class="left_side_navbar_lists_container left_side_navbar_first_list_container">
-            <header class="left_side_navbar_list_all_titles left_side_navbar_first_list_main_title_container">
+            <header class="left_side_navbar_list_all_titles left_side_navbar_first_list_main_title_container icon_text_center flex">
                 <h3 class="left_side_navbar_first_list_main_title">My Tasks</h3>
+                <svg id="add_new_todo_task_btn" class="interactive_icons left_side_navbar_first_list_main_title_icon pointer" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 7.757v8.486M7.757 12h8.486M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"/>
+                </svg>
             </header>
+            <dialog id="add_new_todo_task_dialog" class="add_new_todo_task_dialog">
+                <div class="add_new_todo_task_dialog_container flex">
+                    <div class="add_new_todo_task_dialog_main_title_container">
+                        <h2 class="add_new_todo_task_dialog_main_title">Add a New Task</h2>
+                    </div>
+                    <form action="dialog" class="add_new_todo_task_dialog_input_area grid">
+                        <label for="new_task_name" id="new_task_name_input" class="add_new_todo_task_input_label_container new_task_name_input flex">
+                            <h3 class="add_new_todo_task_input_label">Task:</h3>
+                            <input class="add_new_todo_task_input" type="text" name="new_task_name" id="new_task_name" placeholder="Task's Name" required>
+                        </label>
+                        <label for="new_task_description" id="new_task_description_input" class="add_new_todo_task_input_label_container new_task_description_input flex">
+                            <h3 class="add_new_todo_task_input_label">Description:</h3>
+                            <input class="add_new_todo_task_input" type="text" name="new_task_description" id="new_task_description" placeholder="Description" required>
+                        </label>
+                        <label for="new_task_project" id="new_task_project_input" class="add_new_todo_task_input_label_container new_task_project_input flex">
+                            <h3 class="add_new_todo_task_input_label">Project:</h3>
+                            <select class="add_new_todo_task_input add_new_todo_task_input_project" name="new_task_project" id="new_task_project" required>
+                                <option value="default" selected disabled>Select a Project</option>
+                                <option value="project1">Project1</option>
+                                <option value="project2">Project2</option>
+                                <option value="project3">Project3</option>
+                            </select>
+                        </label>
+                        <label for="new_task_due_date" id="new_task_due_date_input" class="add_new_todo_task_input_label_container new_task_due_date_input flex">
+                            <h3 class="add_new_todo_task_input_label">Due Date:</h3>
+                            <input class="add_new_todo_task_input add_new_todo_task_input_due_date" type="datetime-local" name="new_task_due_date" id="new_task_due_date" required>
+                        </label>
+                        <label for="new_task_priority" id="new_task_priority_input" class="add_new_todo_task_input_label_container new_task_priority_input flex">
+                            <h3 class="add_new_todo_task_input_label">Priority:</h3>
+                            <select class="add_new_todo_task_input add_new_todo_task_input_priority" name="new_task_priority" id="new_task_priority" required>
+                                <option value="low">Low</option>
+                                <option value="medium">Medium</option>
+                                <option value="high">Urgent</option>
+                            </select>
+                        </label>
+                        <button id="new_task_create_btn" class="new_task_create_btn pointer">Create Task</button>
+                    </form>
+                </div>
+            </dialog>
             <ul class="left_side_navbar_first_list flex">
                 <li id="left_side_navbar_first_list_all_tasks" class="left_side_navbar_list_all_titles left_side_navbar_list_titles icon_text_center left_side_navbar_first_list_titles flex pointer current_option">
                     <svg class="left_side_navbar_first_list_icon" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
@@ -55,9 +97,23 @@
         <section class="left_side_navbar_lists_container left_side_navbar_second_list_container">
             <header class="left_side_navbar_list_all_titles icon_text_center left_side_navbar_second_list_titles left_side_navbar_second_list_main_title_container flex">
                 <h3 class="left_side_navbar_second_list_main_title">My Projects</h3>
-                <svg class="interactive_icons left_side_navbar_second_list_main_title_icon pointer" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                <svg id="add_new_todo_project_btn" class="interactive_icons left_side_navbar_second_list_main_title_icon pointer" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 7.757v8.486M7.757 12h8.486M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"/>
-                </svg>                  
+                </svg>
+                <dialog id="add_new_project_dialog" class="add_new_todo_task_dialog">
+                    <div class="add_new_todo_task_dialog_container">
+                        <div class="add_new_todo_task_dialog_main_title_container">
+                            <h2 class="add_new_todo_task_dialog_main_title">Add a Project</h2>
+                        </div>
+                        <div class="add_new_project_content_container flex">
+                            <label for="add_new_project_title" class="add_new_project_title_container flex">
+                                <h3>Project Name:</h3>
+                                <input type="text" name="add_new_project_title" id="add_new_project_title">
+                            </label>
+                        </div>
+                        <button class="add_new_project_btn">Create Project</button>
+                    </div>
+                </dialog>
             </header>
             <ul class="left_side_navbar_second_list flex">
                 <li id="second_navbar_newProject" class="left_side_navbar_list_all_titles left_side_navbar_list_titles icon_text_center left_side_navbar_second_list_titles left_side_navbar_second_list_project flex current_option">
