Add feature to show the Project in the list once it is created

--- a/src/index.html
+++ b/src/index.html
@@ -118,7 +118,7 @@
                     </div>
                 </dialog>
             </header>
-            <ul class="left_side_navbar_second_list flex">
+            <ul id="left_side_navbar_second_project_list" class="left_side_navbar_second_list flex">
                 <li id="second_navbar_newProject" class="left_side_navbar_list_all_titles left_side_navbar_list_titles icon_text_center left_side_navbar_second_list_titles left_side_navbar_second_list_project flex current_option">
                     <p class="left_side_navbar_task_title pointer">New Project</p>
                     <div class="left_side_navbar_second_list_icons_container flex">
