Add filter for tasks

--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
                                 <option value="default" selected disabled>Select a Priority</option>
                                 <option value="low">Low</option>
                                 <option value="medium">Medium</option>
-                                <option value="high">Urgent</option>
+                                <option value="urgent">Urgent</option>
                             </select>
                         </label>
                         <button id="new_task_create_btn" class="new_task_create_btn new_create_btn pointer">Create Task</button>
@@ -177,7 +177,7 @@
                 <article class="main_content_section_individual_task flex current_option">
                     <div class="main_content_section_task_description_left flex">
                         <input type="checkbox" name="task_checkbox2" class="interactive_icons main_content_section_task_checkbox pointer" id="task2">
-                        <label for="task2" class="main_content_section_task_description_text pointer"><p>Here is going to be my second Pending Task.</p></label>
+                        <label for="task2" class="main_content_section_task_description_text pointer"><p class="main_content_section_task_description_text_content">Here is going to be my second Pending Task.</p></label>
                     </div>
                     <div class="main_content_section_task_description_right flex">
                         <p class="main_content_section_task_due_date">Dec-25th-2024</p>
