--- a/src/index.html
+++ b/src/index.html
@@ -119,7 +119,7 @@
                 </dialog>
             </header>
             <ul id="left_side_navbar_second_project_list" class="left_side_navbar_second_list flex">
-                <li id="second_navbar_newProject" class="left_side_navbar_list_all_titles left_side_navbar_list_titles icon_text_center left_side_navbar_second_list_titles left_side_navbar_second_list_project flex current_option">
+                <li id="dom_content_load_test" class="left_side_navbar_list_all_titles left_side_navbar_list_titles icon_text_center left_side_navbar_second_list_titles left_side_navbar_second_list_project flex current_option">
                     <p class="left_side_navbar_task_title pointer">New Project</p>
                     <div class="left_side_navbar_second_list_icons_container flex">
                         <svg class="interactive_icons left_side_navbar_second_list_project_icon pointer" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
@@ -149,7 +149,7 @@
             <svg class="main_content_section_main_title_container_icon" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.5 8H4m0-2v13a1 1 0 0 0 1 1h14a1 1 0 0 0 1-1V9a1 1 0 0 0-1-1h-5.032a1 1 0 0 1-.768-.36l-1.9-2.28a1 1 0 0 0-.768-.36H5a1 1 0 0 0-1 1Z"/>
             </svg>
-            <h2 id="main_content_section_main_title" class="main_content_section_main_title">All Tasks</h2>
+            <h2 id="main_content_section_main_title" data-title="All Tasks" class="main_content_section_main_title">All Tasks</h2>
         </header>
         <section class="main_content_section_task_container flex">
             <h3 class="main_content_section_task_title">Tasks</h3>
