add feature to edit/delete project

--- a/src/index.html
+++ b/src/index.html
@@ -122,16 +122,16 @@
                 <dialog id="edit_project_dialog" class="add_new_edit_project_dialog add_new_edit_dialog">
                     <div class="add_new_edit_project_dialog_container add_new_edit_dialog_container">
                         <div class="add_new_edit_project_dialog_main_title_container add_new_edit_dialog_main_title_container">
-                            <h2 class="add_new_edit_project_dialog_main_title">Edit Project</h2>
+                            <h2 id="edit_project_dialog_main_title" class="add_new_edit_project_dialog_main_title"></h2>
                         </div>
                         <div class="add_new_edit_project_content_container grid">
                             <div class="add_new_edit_project_content">
                                 <label for="edit_project_title" class="add_new_edit_project_title_container flex">
-                                    <h3 id="edit_project_name">Project Name:</h3>
+                                    <h3 id="edit_project_name">Edit Project</h3>
                                     <input type="text" name="edit_project_title" id="edit_project_title" class="add_new_edit_project_title" placeholder="Name">
                                 </label>
                             </div>
-                            <button id="edit_project_create_btn" class="new_edit_project_create_btn new_edit_create_btn pointer">Edit Project</button>
+                            <button id="edit_project_create_btn" class="new_edit_project_create_btn new_edit_create_btn pointer"></button>
                         </div>
                     </div>
                 </dialog>
@@ -149,7 +149,7 @@
                 <li id="second_navbar_anotherNewproject" class="left_side_navbar_list_all_titles left_side_navbar_list_titles icon_text_center left_side_navbar_second_list_titles left_side_navbar_second_list_project flex current_option">
                     <p class="left_side_navbar_task_title pointer">Another New Project again and again</p>
                     <div class="left_side_navbar_second_list_icons_container flex">
-                        <svg id="editBtn_asdfsadfs_0" class="interactive_icons left_side_navbar_second_list_project_icon pointer" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                        <svg class="interactive_icons left_side_navbar_second_list_project_icon pointer" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m14.304 4.844 2.852 2.852M7 7H4a1 1 0 0 0-1 1v10a1 1 0 0 0 1 1h11a1 1 0 0 0 1-1v-4.5m2.409-9.91a2.017 2.017 0 0 1 0 2.853l-6.844 6.844L8 14l.713-3.565 6.844-6.844a2.015 2.015 0 0 1 2.852 0Z"/>
                         </svg>
                         <svg class="interactive_icons left_side_navbar_second_list_project_icon pointer" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
