Fix Modal Issue when editing/deleting a project

--- a/src/index.html
+++ b/src/index.html
@@ -101,6 +101,7 @@
                 <svg id="add_new_todo_project_btn" class="interactive_icons left_side_navbar_second_list_main_title_icon pointer" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 7.757v8.486M7.757 12h8.486M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"/>
                 </svg>
+            </header>
                 <dialog id="add_new_project_dialog" class="add_new_edit_project_dialog add_new_edit_dialog">
                     <div class="add_new_edit_project_dialog_container add_new_edit_dialog_container">
                         <div class="add_new_edit_project_dialog_main_title_container add_new_edit_dialog_main_title_container">
@@ -117,24 +118,23 @@
                         </div>
                     </div>
                 </dialog>
-            </header>
-            <ul id="left_side_navbar_second_project_list" class="left_side_navbar_second_list flex">
-                <dialog id="edit_project_dialog" class="add_new_edit_project_dialog add_new_edit_dialog">
-                    <div class="add_new_edit_project_dialog_container add_new_edit_dialog_container">
-                        <div class="add_new_edit_project_dialog_main_title_container add_new_edit_dialog_main_title_container">
-                            <h2 id="edit_project_dialog_main_title" class="add_new_edit_project_dialog_main_title"></h2>
-                        </div>
-                        <div class="add_new_edit_project_content_container grid">
-                            <div class="add_new_edit_project_content">
-                                <label for="edit_project_title" class="add_new_edit_project_title_container flex">
-                                    <h3 id="edit_project_name">Edit Project</h3>
-                                    <input type="text" name="edit_project_title" id="edit_project_title" class="add_new_edit_project_title" placeholder="Name">
-                                </label>
-                            </div>
-                            <button id="edit_project_create_btn" class="new_edit_project_create_btn new_edit_create_btn pointer"></button>
-                        </div>
+            <dialog id="edit_project_dialog" class="add_new_edit_project_dialog add_new_edit_dialog">
+                <div class="add_new_edit_project_dialog_container add_new_edit_dialog_container">
+                    <div class="add_new_edit_project_dialog_main_title_container add_new_edit_dialog_main_title_container">
+                        <h2 id="edit_project_dialog_main_title" data-name="" class="add_new_edit_project_dialog_main_title"></h2>
                     </div>
-                </dialog>
+                    <div class="add_new_edit_project_content_container grid">
+                        <div class="add_new_edit_project_content">
+                            <label for="edit_project_title" class="add_new_edit_project_title_container flex">
+                                <h3 id="edit_project_name">Edit Project</h3>
+                                <input type="text" name="edit_project_title" id="edit_project_title" class="add_new_edit_project_title" placeholder="Name">
+                            </label>
+                        </div>
+                        <button id="edit_project_create_btn" class="new_edit_project_create_btn new_edit_create_btn pointer"></button>
+                    </div>
+                </div>
+            </dialog>
+            <ul id="left_side_navbar_second_project_list" class="left_side_navbar_second_list flex">
                 <li id="dom_content_load_test" class="left_side_navbar_list_all_titles left_side_navbar_list_titles icon_text_center left_side_navbar_second_list_titles left_side_navbar_second_list_project flex current_option">
                     <p class="left_side_navbar_task_title pointer">New Project</p>
                     <div class="left_side_navbar_second_list_icons_container flex">
@@ -146,14 +146,14 @@
                         </svg>
                     </div>
                 </li>
-                <li id="second_navbar_anotherNewproject" class="left_side_navbar_list_all_titles left_side_navbar_list_titles icon_text_center left_side_navbar_second_list_titles left_side_navbar_second_list_project flex current_option">
-                    <p class="left_side_navbar_task_title pointer">Another New Project again and again</p>
-                    <div class="left_side_navbar_second_list_icons_container flex">
-                        <svg class="interactive_icons left_side_navbar_second_list_project_icon pointer" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m14.304 4.844 2.852 2.852M7 7H4a1 1 0 0 0-1 1v10a1 1 0 0 0 1 1h11a1 1 0 0 0 1-1v-4.5m2.409-9.91a2.017 2.017 0 0 1 0 2.853l-6.844 6.844L8 14l.713-3.565 6.844-6.844a2.015 2.015 0 0 1 2.852 0Z"/>
+                <li id="Another New Project again and again-3" data-index="3" data-name="Another New Project again and again-3" data-title="Another New Project again and again" class="left_side_navbar_list_all_titles left_side_navbar_list_titles icon_text_center left_side_navbar_second_list_titles left_side_navbar_second_list_project flex current_option">
+                    <p data-name="Another New Project again and again-3" data-title="Another New Project again and again" class="left_side_navbar_task_title pointer">Another New Project again and again</p>
+                    <div data-name="Another New Project again and again-3" data-title="Another New Project again and again" class="left_side_navbar_second_list_icons_container flex">
+                        <svg data-icon="edit" data-index="3" data-name="Another New Project again and again" class="interactive_icons left_side_navbar_second_list_project_icon pointer" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                            <path id="editBtn_Another New Project again and again_3" data-icon="edit" data-index="3" data-name="Another New Project again and again" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m14.304 4.844 2.852 2.852M7 7H4a1 1 0 0 0-1 1v10a1 1 0 0 0 1 1h11a1 1 0 0 0 1-1v-4.5m2.409-9.91a2.017 2.017 0 0 1 0 2.853l-6.844 6.844L8 14l.713-3.565 6.844-6.844a2.015 2.015 0 0 1 2.852 0Z"/>
                         </svg>
                         <svg class="interactive_icons left_side_navbar_second_list_project_icon pointer" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 7h14m-9 3v8m4-8v8M10 3h4a1 1 0 0 1 1 1v3H9V4a1 1 0 0 1 1-1ZM6 7h12v13a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1V7Z"/>
+                            <path id="deleteBtn_Another New Project again and again_3" data-icon="delete" data-index="3" data-name="Another New Project again and again" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 7h14m-9 3v8m4-8v8M10 3h4a1 1 0 0 1 1 1v3H9V4a1 1 0 0 1 1-1ZM6 7h12v13a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1V7Z"/>
                         </svg>
                     </div>
                 </li>
