fix delete project feature

--- a/src/index.html
+++ b/src/index.html
@@ -127,7 +127,7 @@
                         <div class="add_new_edit_project_content">
                             <label for="edit_project_title" class="add_new_edit_project_title_container flex">
                                 <h3 id="edit_project_name">Edit Project</h3>
-                                <input type="text" name="edit_project_title" id="edit_project_title" class="add_new_edit_project_title" placeholder="Name">
+                                <input type="text" name="edit_project_title" data-project-id="" data-project-name="" id="edit_project_title" class="add_new_edit_project_title" placeholder="Name">
                             </label>
                         </div>
                         <button id="edit_project_create_btn" class="new_edit_project_create_btn new_edit_create_btn pointer"></button>
